# basic_geometry

./: CMakeLists.txt  README.md
include/: primitives.h
src/: main.cpp  primitives.cpp
